--- a/index.html
+++ b/index.html
@@ -2150,7 +2150,7 @@ var isChinese;
                    <button id="openLocal" class="downbutton" style="height: 22px" onclick="opens()">本地棋谱</button>
                 <a id="main2" href="sgf\test2.sgf" download="测试棋谱.sgf" style="display: none">下载棋谱</a>
                 <button id="download" class="downbutton" style="height: 22px;" onclick="download()">下载棋谱</button>
-                <nobr id="lbl1">(来自</nobr><a id="main3" href="https://pan.baidu.com/s/1q615GHD62F92mNZbTYfcxA">LizzieYzy版</a><nobr id="lbl2">) 选点说明:</nobr><font id="blue" color="#00008b">蓝色</font>><font id="green" color="green">绿色</font>><font id="orange" color="orange">橙色</font><nobr id="lbl3">,上方胜率,下方目数/计算量,</nobr><font id="cyan" color="#6495ed">青色</font><nobr id="lbl4">-胜率曲线,</nobr><font id="purple" color="#663399">紫色</font><nobr id="lbl5">-目数曲线,建议使用</nobr><a id="chrome" href="https://www.google.cn/intl/zh-CN/chrome/">Chrome浏览器</a><nobr id="lbl6">,电脑端可用滚轮控制变化图</nobr>
+                <nobr id="lbl1">(来自</nobr><a id="main3" href="https://aistudio.baidu.com/aistudio/datasetdetail/116865">LizzieYzy版</a><nobr id="lbl2">) 选点说明:</nobr><font id="blue" color="#00008b">蓝色</font>><font id="green" color="green">绿色</font>><font id="orange" color="orange">橙色</font><nobr id="lbl3">,上方胜率,下方目数/计算量,</nobr><font id="cyan" color="#6495ed">青色</font><nobr id="lbl4">-胜率曲线,</nobr><font id="purple" color="#663399">紫色</font><nobr id="lbl5">-目数曲线,建议使用</nobr><a id="chrome" href="https://www.google.cn/intl/zh-CN/chrome/">Chrome浏览器</a><nobr id="lbl6">,电脑端可用滚轮控制变化图</nobr>
                 </div>
             <div style=" height:0px; overflow:hidden; position:absolute;">
                 <input type="file" id="up" onchange="check()"/></div></div>
