--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="user-scalable=false">
 	<meta http-equiv="X-UA-Compatible" content="IE=11"/>
     <title>Lizzie Player</title>
-
+    <basefont size="15" />
     <script>
         String.prototype.replaceAll = function (FindText, RepText) {
             return this.replace(new RegExp(FindText, "g"), RepText);
@@ -89,8 +89,38 @@ var isChinese;
                 lbl5.innerHTML="-ScoreLine";
                 var chrome=document.getElementById("chrome");
                 chrome.innerHTML="";
+                var chrome=document.getElementById("chrome1");
+                chrome.innerHTML="";
                 var lbl6=document.getElementById("lbl6");
                 lbl6.innerHTML=",Use mouse wheel to control variation in computer";
+				
+				 var lbl11=document.getElementById("lbl11");
+                lbl11.innerHTML="(From ";
+                var lbl21=document.getElementById("lbl21");
+                lbl21.innerHTML=") Candidates:";
+                var blue1=document.getElementById("blue1");
+                blue1.innerHTML="blue";
+                var green1=document.getElementById("green1");
+                green1.innerHTML="green";
+                var orange1=document.getElementById("orange1");
+                orange1.innerHTML="orange";
+                var lbl31=document.getElementById("lbl31");
+                lbl31.innerHTML=",up-Winrate,down-Score/PO,";
+                var cyan1=document.getElementById("cyan1");
+                cyan1.innerHTML="cyan";
+                var purple1=document.getElementById("purple1");
+                purple1.innerHTML="purple";
+                var lbl41=document.getElementById("lbl41");
+                lbl41.innerHTML="-WinrateLine,";
+                var lbl51=document.getElementById("lbl51");
+                lbl51.innerHTML="-ScoreLine";
+                var chrome11=document.getElementById("chrome11");
+                chrome11.innerHTML="";
+                var chrome2=document.getElementById("chrome2");
+                chrome2.innerHTML="";
+                var lbl61=document.getElementById("lbl61");
+                lbl61.innerHTML=",Use mouse wheel to control variation in computer";
+				
                 var lbl7=document.getElementById("lbl7");
                 lbl7.innerHTML="    Current browser does not support WGo.js,";
                 var main4=document.getElementById("main4");
@@ -2142,15 +2172,16 @@ var isChinese;
 <div style="width: 100%; height:100%;">
     <div class="row" style="width: 100%; height:100%;">
         <div style="width: 100%; height:100%;">
-            <div id="main" data-wgo="sgf\test2.sgf" style="width:100%;height:934px;margin: 0px 0px 0px 20px">
-                <nobr id="lbl7">    当前浏览器不支持WGo.js,</nobr><a id="main4" href="sgf\test2.sgf">直接点击下载SGF棋谱</a>
+            <div id="main" data-wgo="qp\test2.sgf" style="width:100%;height:934px;margin: 0px 0px 0px 20px">
+                <nobr id="lbl7">    当前浏览器不支持WGo.js,</nobr><a id="main4" href="qp\test2.sgf">直接点击下载SGF棋谱</a>
+				<a href="https://beian.miit.gov.cn/">浙ICP备20001934号-1</a><nobr id="lbl1">来自</nobr><a id="main3" href="https://aistudio.baidu.com/aistudio/datasetdetail/116865">LizzieYzy版</a><nobr id="lbl2">,选点说明:</nobr><font id="blue" color="#00008b">蓝色</font>><font id="green" color="green">绿色</font>><font id="orange" color="orange">橙色</font><nobr id="lbl3">,上方胜率,下方目数/计算量,</nobr><font id="cyan" color="#6495ed">青色</font><nobr id="lbl4">-胜率曲线,</nobr><font id="purple" color="#663399">紫色</font><nobr id="lbl5">-目数曲线,建议使用</nobr><a id="chrome" href="https://www.google.cn/intl/zh-CN/chrome/">Chrome浏览器</a><nobr id="lbl6">,电脑端可用滚轮控制变化图</nobr>
             </div>
-            <div id="last" style="height:25px;padding: 0px 0px 0px 20px">
+            <div id="last" style="height:25px;padding: 0px 0px 0px 20px;">
                 <button id="copyUrl" class="downbutton" style="height: 22px;" data-clipboard-target="#copyUrl" data-clipboard-action="copy" onClick="copyUrl()">复制链接</button>
                    <button id="openLocal" class="downbutton" style="height: 22px" onclick="opens()">本地棋谱</button>
-                <a id="main2" href="sgf\test2.sgf" download="测试棋谱.sgf" style="display: none">下载棋谱</a>
+                <a id="main2" href="qp\test2.sgf" download="测试棋谱.sgf" style="display: none">下载棋谱</a>
                 <button id="download" class="downbutton" style="height: 22px;" onclick="download()">下载棋谱</button>
-                <nobr id="lbl1">(来自</nobr><a id="main3" href="https://aistudio.baidu.com/aistudio/datasetdetail/116865">LizzieYzy版</a><nobr id="lbl2">) 选点说明:</nobr><font id="blue" color="#00008b">蓝色</font>><font id="green" color="green">绿色</font>><font id="orange" color="orange">橙色</font><nobr id="lbl3">,上方胜率,下方目数/计算量,</nobr><font id="cyan" color="#6495ed">青色</font><nobr id="lbl4">-胜率曲线,</nobr><font id="purple" color="#663399">紫色</font><nobr id="lbl5">-目数曲线,建议使用</nobr><a id="chrome" href="https://www.google.cn/intl/zh-CN/chrome/">Chrome浏览器</a><nobr id="lbl6">,电脑端可用滚轮控制变化图</nobr>
+                <nobr id="lbl21">选点说明:</nobr><nobr id="lbl31">上方胜率,下方目数/计算量,</nobr><font id="blue1" color="#00008b">蓝色</font>><font id="green1" color="green">绿色</font>><font id="orange1" color="orange">橙色</font>,<a href="https://beian.miit.gov.cn/">浙ICP</a>备20001934号-1<a id="lbl11" href="https://aistudio.baidu.com/aistudio/datasetdetail/116865">来自</a><nobr id="main3">LizzieYzy</nobr><font id="cyan1" color="#6495ed">,青色</font><nobr id="lbl41">-胜率曲线,</nobr><font id="purple1" color="#663399">紫色</font><nobr id="lbl51">-目数曲线</nobr><no id="chrome11">,建议使用</no><a id="chrome2" href="https://www.google.cn/intl/zh-CN/chrome/">Chrome浏览器</a><nobr id="lbl61">,电脑端可用滚轮控制变化图</nobr>
                 </div>
             <div style=" height:0px; overflow:hidden; position:absolute;">
                 <input type="file" id="up" onchange="check()"/></div></div>
